test/official_tests/super/super_in_top_level_function.lox
  super.bar(); // error: {"line":1,"message":"Can't use 'super' outside of a class","type":"RuntimeError"}
fun foo() {
}